--- a/sala-debate/backend/requirements.txt
+++ b/sala-debate/backend/requirements.txt
@@ -1,17 +1,8 @@
-flask==3.0.0
-flask-cors==4.0.0
-openai==1.11.0  
-python-dotenv==1.0.0
-pymongo==4.6.1
-flask-pymongo==2.3.0
-
-# Socket.IO
-flask-socketio==5.3.6
-python-socketio==5.8.0
-python-engineio==4.8.0
-eventlet==0.33.3  # Necesario para WebSocket con Flask-SocketIO
-
-# Agentscope y compatibilidad
-agentscope==0.1.5
-pydantic==1.10.22  # Asegura compatibilidad con agentscope
-typing-extensions>=4.0.0
+agentscope
+Flask==2.3.3
+Flask-SocketIO==5.3.6
+Flask-Cors==4.0.0
+Flask-PyMongo==2.3.0
+python-dotenv==1.0.1
+eventlet==0.33.3
+pymongo==4.7.0
