--- a/sala-debate/docker-compose.yml
+++ b/sala-debate/docker-compose.yml
@@ -12,6 +12,9 @@ services:
     environment:
       - FLASK_ENV=development
       - ORIGIN_DOMAIN=${ORIGIN_DOMAIN}
+      - DATABASE_URL=${DATABASE_URL}
+    depends_on:
+      - db
 
   frontend:
     build:
@@ -29,3 +32,19 @@ services:
     depends_on:
       - backend
       - frontend
+
+  db:
+    image: postgres:15
+    container_name: postgres_db
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: chatdb
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data   # referencia al volumen declarado más abajo
+
+volumes:
+  postgres_data: {}  # <-- declarar el volumen vacío así
