--- a/sala-debate/backend/Dockerfile
+++ b/sala-debate/backend/Dockerfile
@@ -11,4 +11,4 @@ ENV FLASK_APP=app.py
 ENV FLASK_ENV=development
 ENV PYTHONUNBUFFERED=1
 
-CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5000", "--reload"]
